--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "bootstrap": "^3.3.7",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "intl": "^1.2.5",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.1.9",
     "ng2-bootstrap": "^1.1.16",
@@ -33,6 +35,7 @@
     "rxjs": "5.0.0-beta.12",
     "semantic-ui-css": "^2.2.4",
     "ts-helpers": "^1.1.1",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
