--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngrx/effects": "^4.0.1",
+    "@ngrx/store": "^4.0.0",
+    "@ngrx/store-devtools": "^4.0.0",
     "angular2-froala-wysiwyg": "^2.6.0",
     "bootstrap": "^3.3.7",
     "classlist.js": "^1.1.20150312",
@@ -31,32 +34,32 @@
     "jsonwebtoken": "^7.1.9",
     "ng2-bootstrap": "^1.1.16",
     "ng2-file-upload": "^1.1.4-2",
-    "ng2-toasty": "^2.5.0",
-    "ngx-uploader": "^2.0.22",
-    "rxjs": "5.0.0-beta.12",
+    "ng2-toasty": "^4.0.3",
+    "ngx-uploader": "^3.3.2",
+    "rxjs": "^5.4.2",
     "semantic-ui-css": "^2.2.4",
     "ts-helpers": "^1.1.1",
     "web-animations-js": "^2.2.5",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.0",
+    "@angular/cli": "1.2.4",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
+    "@types/jasmine": "2.5.53",
+    "@types/node": "~8.0.17",
+    "codelyzer": "~3.1.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "ts-node": "~3.3.0",
+    "tslint": "~5.5.0",
+    "typescript": "~2.4.2"
   }
 }
