--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ng2-toasty": "^4.0.3",
     "ngx-uploader": "^3.3.2",
     "node-sass": "^4.5.3",
+    "recordrtc": "^5.4.4",
     "rxjs": "^5.4.2",
     "ts-helpers": "^1.1.1",
     "web-animations-js": "^2.2.5",
