--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/effects": "^4.0.1",
     "@ngrx/store": "^4.0.0",
     "@ngrx/store-devtools": "^4.0.0",
+    "angular-froala-wysiwyg": "^2.7.3",
     "angular2-froala-wysiwyg": "^2.6.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
