--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --aot",
+    "build": "ng build --prod --aot --bh ./",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -34,6 +34,7 @@
     "bootstrap": "4.0.0-beta.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
     "ionicons": "^3.0.0",
